@@ -81,6 +81,12 @@ public:
      */
     virtual void contextMenuEvent(QGraphicsSceneContextMenuEvent *) {}
 
+    /**
+     * Paints the background image, if any.
+     */
+    virtual void paint(QPainter *painter,
+            const QStyleOptionGraphicsItem *option, QWidget *widget);
+
     //--------------------------------------------------------------------------
 
     /**
